fix(shs-5178): a few more contrast fixes

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
@@ -343,6 +343,10 @@
       left: 0;
     }
 
+    .hc-pairing-ocean & {
+      @include hb-pairing-color('background-color', 'secondary-darken-12');
+    }
+
     &:only-child {
       position: relative;
       bottom: auto;
