--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.buttons.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.buttons.scss
@@ -259,4 +259,19 @@
       box-shadow: none;
     }
   }
+
+  .hc-pairing-ocean & {
+    @include hb-pairing-color('color', 'secondary-darken-12');
+    @include hb-pairing-color('border-bottom-color', 'secondary-darken-12');
+
+    &:hover {
+      @include hb-pairing-color('color', 'primary-dark');
+      @include hb-pairing-color('border-bottom-color', 'primary-dark');
+
+      background-color: transparent;
+      border-top-color: transparent;
+      border-left-color: transparent;
+      border-right-color: transparent;
+    }
+  }
 }
